# ntf-file-structs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/NTF/Audio/: Wave.hpp
